--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 #spring.jpa.database=mysql
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/nageshdb
-#spring.datasource.username=root
-#spring.datasource.password=N@gesh@roy04
-
-
-#spring.jpa.show-sql=true
-
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
-spring.datasource.username=Nagesh04
-spring.datasource.password=Nagesh04
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51676/railway
+spring.datasource.username=root
+spring.datasource.password=SPbhSgWERoNgPdVaGFZnKEKbxaMNXxux
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+#spring.datasource.username=Nagesh04
+#spring.datasource.password=Nagesh04
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
