--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51676/railway
-spring.datasource.username=root
-spring.datasource.password=SPbhSgWERoNgPdVaGFZnKEKbxaMNXxux
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://${monorail.proxy.rlwy.net}:${DB_PORT}/${railway}
+spring.datasource.username=${root}
+spring.datasource.password=${SPbhSgWERoNgPdVaGFZnKEKbxaMNXxux}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -17,3 +17,9 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+#spring.datasource.url=jdbc:mysql://${monorail.proxy.rlwy.net}:${DB_PORT}/${railway}
+#spring.datasource.username=${root}
+#spring.datasource.password=${SPbhSgWERoNgPdVaGFZnKEKbxaMNXxux}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
