--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51676/railway
-spring.datasource.username=root
-spring.datasource.password=SPbhSgWERoNgPdVaGFZnKEKbxaMNXxux
+#spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:51676/railway
+#spring.datasource.username=root
+#spring.datasource.password=SPbhSgWERoNgPdVaGFZnKEKbxaMNXxux
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+SPRING_DATASOURCE_URL=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+SPRING_DATASOURCE_USERNAME=${DB_USER}
+SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
 #spring.datasource.username=Nagesh04
 #spring.datasource.password=Nagesh04
