--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.mvc.view.suffix=.jsp
 #SPRING_DATASOURCE_USERNAME=${DB_USER}
 #SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.open-in-view=false
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
 #spring.datasource.username=Nagesh04
 #spring.datasource.password=Nagesh04
