--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,11 @@
 </dependency>
 
          
-        <!-- <dependency>
+      <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-jasper</artifactId>
         <scope>provided</scope>
-        </dependency>-->
+        </dependency>
         
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
     <dependency>
