--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
       <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-jasper</artifactId>
-        <scope>provided</scope>
+        <scope>compile </scope>
         </dependency>
         
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
