--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.twg</groupId>
 	<artifactId>mydiary</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>mydiary</name>
 	<description>My First spring boot jpa project</description>
 	<properties>
